<resources>
    <string name="app_name">NoCash</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="add_new">Add new</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="font_family">sans-serif-light</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_add_record">Add record</string>
    <string name="title_budget">Budget</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="help_center">Help center</string>
    <string name="contact">Contact</string>
</resources>