<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/title_home"
    />
    <item
            android:id="@+id/navigation_statistics"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/statistics"
    />
    <item
            android:id="@+id/add_new_record"

            android:icon="@drawable/baseline_add_circle_outline_24"
            android:title="@string/add_new"
    />
    <item
            android:id="@+id/navigation_budget"
            android:icon="@drawable/baseline_insert_chart_outlined_24"
            android:title="@string/budget"
    />
    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/baseline_person_outline_24"
            android:title="@string/profile"
    />
</menu>