<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.nocash.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.example.nocash.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>

    <fragment
            android:id="@+id/navigation_statistics"
            android:name="com.example.nocash.ui.statistics.StatisticsFragment"
            android:label="@string/title_statistics"
            tools:layout="@layout/fragment_statistics"/>

    <fragment
            android:id="@+id/navigation_add_record"
            android:name="com.example.nocash.ui.add_record.AddRecordFragment"
            android:label="@string/title_add_record"
            tools:layout="@layout/fragment_add_record"/>

    <fragment
            android:id="@+id/navigation_budget"
            android:name="com.example.nocash.ui.budget.BudgetFragment"
            android:label="@string/title_budget"
            tools:layout="@layout/fragment_budget"/>

    <fragment
            android:id="@+id/fragment_profile_main"
            android:name="com.example.nocash.ui.profile.ProfileMain"
            android:label="@string/title_budget"
            tools:layout="@layout/fragment_profile_main"/>

    <fragment
            android:id="@+id/profile_navigation_my_account"
            android:name="com.example.nocash.ui.budget.BudgetFragment"
            android:label="@string/title_budget"
            tools:layout="@layout/fragment_budget">
    <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/fragment_profile_main"/>

    </fragment>
    <fragment
            android:id="@+id/profile_navigation_setting"
            android:name="com.example.nocash.ui.budget.BudgetFragment"
            android:label="@string/title_budget"
            tools:layout="@layout/fragment_budget"/>
    <fragment
            android:id="@+id/profile_navigation_help_center"
            android:name="com.example.nocash.ui.budget.BudgetFragment"
            android:label="@string/title_budget"
            tools:layout="@layout/fragment_budget"/>
    <fragment
            android:id="@+id/profile_navigation_contact"
            android:name="com.example.nocash.ui.budget.BudgetFragment"
            android:label="@string/title_budget"
            tools:layout="@layout/fragment_budget"/>

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_dashboard"-->
    <!--        android:name="com.example.nocash.ui.dashboard.DashboardFragment"-->
    <!--        android:label="@string/title_dashboard"-->
    <!--        tools:layout="@layout/fragment_dashboard" />-->

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_notifications"-->
    <!--        android:name="com.example.nocash.ui.notifications.NotificationsFragment"-->
    <!--        android:label="@string/title_notifications"-->
    <!--        tools:layout="@layout/fragment_notifications" />-->
</navigation>